# kcm-fontadjust

./: CMakeLists.txt  kcm-fontadjust.kdev4
helper/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  antialiasing_page.ui  antialiasingpage.cpp  antialiasingpage.h  fontadjust.cpp  fontadjust.desktop  fontadjust.h  fontadjustpage.cpp  fontadjustpage.h  fontadjustwizard.cpp  fontadjustwizard.h  helper.cpp  helper.h  hint_page.ui  hintpage.cpp  hintpage.h  kxftconfig.cpp  kxftconfig.h  subpixel_page.ui  subpixelpage.cpp  subpixelpage.h
